# ascii-box-fixer

./: README.md  fix_ascii_boxes.py  pyproject.toml  test_fix_ascii_boxes.py
.github/workflows/: test.yml
examples/: complete_system_architecture2_after.md  complete_system_architecture2_before.md  complete_system_architecture_after.md  complete_system_architecture_before.md  data_link_layer_after.md  data_link_layer_before.md  deeply_nested.md  multiple_boxes_after.md  multiple_boxes_before.md  nested_boxes_after.md  nested_boxes_before.md  simple_box_after.md  simple_box_before.md  simple_detection.md  test_bottom_row_after.txt  test_bottom_row_before.txt  test_multiple_boxes_after.txt  test_multiple_boxes_before.txt  test_nested_boxes_after.txt  test_nested_boxes_before.txt  test_simple_box_after.txt  test_simple_box_before.txt  transceiver_base_layer_after.md  transceiver_base_layer_before.md
